localization/v3.0.x/site/id/userGuide/indexes/scalar/stl-sort.md
---
id: stl-sort.md
title: STL_SORT
summary: >-
  Indeks STL_SORT adalah jenis indeks yang dirancang khusus untuk meningkatkan
  kinerja kueri pada bidang numerik (INT8, INT16, dll.), Bidang VARCHAR, atau
  bidang TIMESTAMPTZ di dalam Milvus dengan mengatur data dalam urutan yang
  diurutkan.
---
<h1 id="STLSORT" class="common-anchor-header">STL_SORT<button data-href="#STLSORT" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h1><p>Indeks <code translate="no">STL_SORT</code> adalah jenis indeks yang dirancang khusus untuk meningkatkan performa kueri pada field numerik (INT8, INT16, dsb.), field <code translate="no">VARCHAR</code>, atau field <code translate="no">TIMESTAMPTZ</code> di dalam Milvus dengan mengorganisasikan data dalam urutan yang diurutkan.</p>
<p>Gunakan indeks <code translate="no">STL_SORT</code> jika Anda sering menjalankan kueri dengan:</p>
<ul>
<li><p>Pemfilteran perbandingan dengan operator <code translate="no">==</code>, <code translate="no">!=</code>, <code translate="no">&gt;</code>, <code translate="no">&lt;</code>, <code translate="no">&gt;=</code>, dan <code translate="no">&lt;=</code> </p></li>
<li><p>Pemfilteran rentang dengan operator <code translate="no">IN</code> dan <code translate="no">LIKE</code> </p></li>
</ul>
<h2 id="Supported-data-types" class="common-anchor-header">Tipe data yang didukung<button data-href="#Supported-data-types" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><ul>
<li><p>Bidang numerik (misalnya, <code translate="no">INT8</code>, <code translate="no">INT16</code>, <code translate="no">INT32</code>, <code translate="no">INT64</code>, <code translate="no">FLOAT</code>, <code translate="no">DOUBLE</code>). Untuk detailnya, lihat <a href="/docs/id/number.md">Boolean &amp; Angka</a>.</p></li>
<li><p><code translate="no">VARCHAR</code> bidang. Untuk detailnya, lihat <a href="/docs/id/string.md">Bidang String</a>.</p></li>
<li><p><code translate="no">TIMESTAMPTZ</code> bidang. Untuk detailnya, lihat <a href="/docs/id/timestamptz-field.md">Bidang Waktu</a>.</p></li>
</ul>
<h2 id="How-it-works" class="common-anchor-header">Bagaimana cara kerjanya<button data-href="#How-it-works" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><p>Milvus mengimplementasikan <code translate="no">STL_SORT</code> dalam dua fase:</p>
<ol>
<li><p><strong>Membangun indeks</strong></p>
<ul>
<li><p>Selama proses ingestion, Milvus mengumpulkan semua nilai untuk bidang yang diindeks.</p></li>
<li><p>Nilai-nilai tersebut diurutkan dalam urutan menaik menggunakan <a href="https://en.cppreference.com/w/cpp/algorithm/sort.html">std::sort</a> C++ STL.</p></li>
<li><p>Setiap nilai dipasangkan dengan ID entitasnya, dan larik yang telah diurutkan disimpan sebagai indeks.</p></li>
</ul></li>
<li><p><strong>Mempercepat kueri</strong></p>
<ul>
<li><p>Pada saat query, Milvus menggunakan <strong>pencarian biner</strong><a href="https://en.cppreference.com/w/cpp/algorithm/lower_bound.html">(std::lower_bound</a> dan <a href="https://en.cppreference.com/w/cpp/algorithm/upper_bound.html">std::upper_bound</a>) pada larik terurut.</p></li>
<li><p>Untuk persamaan, Milvus dengan cepat menemukan semua nilai yang cocok.</p></li>
<li><p>Untuk rentang, Milvus menemukan posisi awal dan akhir dan mengembalikan semua nilai di antaranya.</p></li>
<li><p>ID entitas yang cocok diteruskan ke eksekutor kueri untuk perakitan hasil akhir.</p></li>
</ul></li>
</ol>
<p>Hal ini mengurangi kompleksitas kueri dari <strong>O(n)</strong> (pemindaian penuh) menjadi <strong>O(log n + m)</strong>, di mana <em>m</em> adalah jumlah kecocokan.</p>
<h2 id="Create-an-STLSORT-index" class="common-anchor-header">Membuat indeks STL_SORT<button data-href="#Create-an-STLSORT-index" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><p>Anda dapat membuat indeks <code translate="no">STL_SORT</code> pada bidang numerik atau <code translate="no">TIMESTAMPTZ</code>. Tidak ada parameter tambahan yang diperlukan.</p>
<p>Contoh di bawah ini menunjukkan cara membuat indeks <code translate="no">STL_SORT</code> pada ruas <code translate="no">TIMESTAMPTZ</code>:</p>
<pre><code translate="no" class="language-python"><span class="hljs-keyword">from</span> pymilvus <span class="hljs-keyword">import</span> MilvusClient

client = MilvusClient(uri=<span class="hljs-string">&quot;http://localhost:19530&quot;</span>) <span class="hljs-comment"># Replace with your server address</span>

<span class="hljs-comment"># Assume you have defined a TIMESTAMPTZ field named &quot;tsz&quot; in your collection schema</span>

<span class="hljs-comment"># Prepare index parameters</span>
index_params = client.prepare_index_params()

<span class="hljs-comment"># Add RTREE index on the &quot;tsz&quot; field</span>
<span class="highlighted-comment-line">index_params.add_index(</span>
<span class="highlighted-comment-line">    field_name=<span class="hljs-string">&quot;tsz&quot;</span>,</span>
<span class="highlighted-comment-line">    index_type=<span class="hljs-string">&quot;STL_SORT&quot;</span>,   <span class="hljs-comment"># Index for TIMESTAMPTZ</span></span>
<span class="highlighted-comment-line">    index_name=<span class="hljs-string">&quot;tsz_index&quot;</span>,  <span class="hljs-comment"># Optional, name your index</span></span>
<span class="highlighted-comment-line">    params={}                <span class="hljs-comment"># No extra params needed</span></span>
<span class="highlighted-comment-line">)</span>

<span class="hljs-comment"># Create the index on the collection</span>
client.create_index(
    collection_name=<span class="hljs-string">&quot;tsz_demo&quot;</span>,
    index_params=index_params
)
<button class="copy-code-btn"></button></code></pre>
<h2 id="Drop-an-index" class="common-anchor-header">Menghapus indeks<button data-href="#Drop-an-index" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><p>Gunakan metode <code translate="no">drop_index()</code> untuk menghapus indeks yang sudah ada dari koleksi.</p>
<div class="alert note">
</div>
<pre><code translate="no" class="language-python">client.drop_index(
    collection_name=<span class="hljs-string">&quot;tsz_demo&quot;</span>,   <span class="hljs-comment"># Name of the collection</span>
    index_name=<span class="hljs-string">&quot;tsz_index&quot;</span> <span class="hljs-comment"># Name of the index to drop</span>
)
<button class="copy-code-btn"></button></code></pre>
<h2 id="Usage-notes" class="common-anchor-header">Catatan penggunaan<button data-href="#Usage-notes" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><ul>
<li><p><strong>Jenis bidang:</strong> Bekerja dengan bidang numerik dan <code translate="no">TIMESTAMPTZ</code>. Untuk informasi lebih lanjut mengenai tipe data, lihat <a href="/docs/id/timestamptz-field.md">Bidang</a> <a href="/docs/id/number.md">Boolean &amp; Angka</a> dan <a href="/docs/id/timestamptz-field.md">TIMESTAMPTZ</a>.</p></li>
<li><p><strong>Parameter:</strong> Tidak diperlukan parameter indeks.</p></li>
<li><p><strong>Mmap tidak didukung:</strong> Mode pemetaan memori tidak tersedia untuk <code translate="no">STL_SORT</code>.</p></li>
</ul>
